nautilus: Fix handing sftp folders with % character

https://bugzilla.gnome.org/show_bug.cgi?id=765828